...
        android:name="com.example.aicollect.presentation.auth.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.aicollect.presentation.collection.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
...
        android:name="com.example.aicollect.presentation.settings.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.example.aicollect.presentation.collection.ItemDetailFragment"
        android:label="ItemDetail"
        tools:layout="@layout/fragment_item_detail"
        xmlns:tools="http://schemas.android.com/tools">
        <argument
            android:name="itemId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/editItemFragment"
        android:name="com.example.aicollect.presentation.edititem.EditItemFragment"
        android:label="EditItem"
        tools:layout="@layout/fragment_edit_item"
        xmlns:tools="http://schemas.android.com/tools">
        <argument
            android:name="itemId"
...
